--- a/RTLDragDrop_html/styles/RTLDragDrop_dliLearn.css
+++ b/RTLDragDrop_html/styles/RTLDragDrop_dliLearn.css
@@ -55,7 +55,7 @@
     border-style: solid;
     border-width: 1px;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-    color: #333333;
+
     cursor: default;
     display: inline-block;
     font-size: 14px;
@@ -71,31 +71,31 @@
     background-color: transparent;
     cursor: default;
     height: 40px;
-    left: 15px;
+    left: -10px;
     margin: 10px;
     position: absolute;
-    top: 429px;
-    width: 898px;
+    top: 488px;
+    width: 660px;
 }
 #setDiv {
     background-color: #F5F5F5;
     cursor: default;
     height: 30px;
-    left: 871px;
+    left: 607px;
     position: relative;
     top: 5px;
-    width: 115px;
+    width: 110px;
     z-index: 0;
 }
 #clickGuard {
     background-color: grey;
     display: none;
-    height: 353px;
-    left: -11px;
-    opacity: 0.3;
+    height: 537px;
+    left: 545px;
+    opacity: 0.2;
     position: absolute;
     top: 0;
-    width: 191px;
+    width: 177px;
     z-index: 166;
 }
 .activity_description {
@@ -104,7 +104,7 @@
     font-size: 12px;
     letter-spacing: 2px;
     margin-bottom: 20px;
-    margin-left: 26px;
+    margin-left: 6px;
     margin-top: -19px;
 }
 .activity_hd {
@@ -112,7 +112,7 @@
     display: block;
     font-family: inherit;
     font-size: 22px;
-    margin-left: 26px;
+    margin-left: 6px;
     margin-top: -2px;
 }
 html body {
@@ -145,34 +145,40 @@ html body {
     box-shadow: 0 2px 4px #BDBDBD;
     display: block;
     float: left;
-    left: 769px;
+    left: -7px;
     margin: 0 0 0 7px;
-    max-height: 309px;
-    min-height: 309px;
+    max-height: 90px;
+    min-height: 90px;
     padding: 20px;
     position: relative;
-    top: 0;
-    width: 185px;
+    top: 405px;
+    width: 489px;
     z-index: 0;
 }
 #feedbackHeader {
     font-size: 20px;
     letter-spacing: 2px;
     margin-top: -13px;
+    margin-left: -8px;
 }
 #feedbackText {
-    margin-top: -13px;
+    margin-top: -8px;
+    margin-left: -8px;
+    margin-right:-8px;
+    height: 35px;
 }
 #feedbackBtn {
-    bottom: 10px;
+    bottom: 11px;
     position: absolute;
-    right: 26px;
+    right: 13px;
 }
 #backgroundImg {
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 2px 2px #BDBDBD;
-    left: 184px;
+    /*left: 172px;*/
     position: absolute;
+    height:400px;
+    width:530px;
 }
 .dropped{
     opacity: 1;
@@ -196,8 +202,10 @@ html body {
     width: 140px;
 }
 #main {
-    left: 32px;
+    left: 0px;
     position: absolute;
+    height:550px;
+    width:840px;
 }
 .dragBubbleText {
     cursor: default;
@@ -209,8 +217,9 @@ html body {
 }
 .playBtn {
     border-right: 1px solid #BDBDBD;
-    float: left;
+    float: right;
     width: 30px;
+    padding-left:5px;
 }
 .playBtnD{
     border-right: 1px solid #BDBDBD;
@@ -223,7 +232,7 @@ html body {
 }
 .dropTargetText {
     cursor: default;
-    font-size: 16px;
+    font-size: 12px;
     left: 5px;
     margin: 6px;
     position: relative;
@@ -239,25 +248,38 @@ html body {
     margin-top: 15px;
     position: absolute;
     width: 163px;
+    text-align:right;
 }
 #dropTargets {
-    left: 184px;
+    /*left: 184px;*/
     position: absolute;
     width: 170px;
     z-index: 100;
 }
 #dragBubbles {
-    left: 0;
+    left: 550px;
     position: absolute;
     width: 160px;
+    top:-15px;
 }
 #imageContainer {
     height: 350px;
-    left: 185px;
+    left: 165px;
     position: absolute;
     top: 15px;
     width: 250px;
 }
 .imageOverlay {
     position: absolute;
+}
+#activityGuard {
+    background-color: grey;
+    display: none;
+    height: 580px;
+    left: -7px;
+    opacity: 0.1;
+    position: absolute;
+    top: -10px;
+    width: 869px;
+    z-index: 266;
 }
