--- a/Enabling_10_html/styles/enabling_10_dlilearn.css
+++ b/Enabling_10_html/styles/enabling_10_dlilearn.css
@@ -98,6 +98,14 @@ html body {
     margin-top: -10px;
 }
 
+#feedbackText {
+    max-height: 60px;
+    min-height: 60px;
+    margin-top:-10px;
+    width:790px;
+}
+
+
 
 .displayNone{
 	display: none;
