--- a/Enabling_14a_html/styles/enabling_14a_dlilearn.css
+++ b/Enabling_14a_html/styles/enabling_14a_dlilearn.css
@@ -307,6 +307,8 @@ html body {
 
 #phone {
 	float: left;
+	/*added */
+	width:266px;
 }
 
 .clear {
@@ -317,7 +319,9 @@ html body {
 }
 
 #container {
-	float: left
+	float: left   ;
+	/*added*/
+	width : 576px;
 }
 
 #mainContent {
@@ -336,7 +340,7 @@ html body {
 	list-style-type: none;
 	margin: 0px 0px 0px 1px;
 	padding: 0;
-	width: 605px;
+	width: 576px;
 }
 #selectable li {
 	margin: 3px;
@@ -365,7 +369,8 @@ html body {
 }
 
 body {
-	width: 880px
+	/*width: 868px;   */
+	width: 99%;
 }
 
 #scratchText {
@@ -407,5 +412,7 @@ body {
 
 #main {
 	height: 418px;
+	/*added*/
+	width:842px;
 }
 
