--- a/CardMatch_html/styles/cardmatch_dlilearn.css
+++ b/CardMatch_html/styles/cardmatch_dlilearn.css
@@ -54,6 +54,7 @@ html body {
 	margin-bottom:4px;
 	margin-right:14px;
 	float:left;
+	cursor:pointer;
 }
 
 .card-wrapper {
@@ -82,18 +83,20 @@ html body {
 }
 
 .card .card-detail p {
+	position:absolute;
+	left:5px;
+	top:40px;
 	display:block;
-	width:75%;
-	height:75%;	
+	width:100px;
+	height:130px;	
 	font-weight:bold;	
 	color:#333;				
 	font-family: 'Arial';
-	font-size:18px;
+	letter-spacing:0px;
+	font-size:14px;
 	text-align:center;
-	margin:10px;
-	padding: 45px,5px,5px,5px;	
-
-
+	margin:0px;
+	padding:0px;
 }		
 
 /*
@@ -158,10 +161,11 @@ html body {
 			transform: rotateY(-180deg);			
 }
 .hiddenId{
-	width:15px;
+	position:absolute;
 	text-align: center;
 	margin: 10px;
-	/*visibility: hidden;*/
+	background-color:#FFF;
+	visibility:hidden;
 
 }
 #feedback {
@@ -185,6 +189,7 @@ html body {
     bottom: 10px;
     position: absolute;
     right: 10px;
+	cursor:pointer;
 }
 #feedbackHeader {
     font-size: 20px;
@@ -212,11 +217,14 @@ html body {
 	display: none;
 	opacity: 0.3;
 	background-color: lightgray;
+	background-image:url(transBG.png);
+	background-repeat:repeat;
 	position: absolute;
 	top: 0px;
 	left: 0px;
 	width: 100%;
 	height: 100%;
+	z-index:200;
 }
 
 .noSelect{
